# imaging_cert_value_7T_pipeline

./: .gitignore  ReadMe.md  convert_data_to_BIDS
behav2onsets/: .Rhistory  Auto_SPM_mat_generation.m  Generate_mat_files.m  README.md  events_analysis_functions.R  get_events_for_SPM.R  get_events_wrapper.R  prnt_spm_json_nd_perform_behav_analysis.R
cai2bids/: README.md  addtaskname2bids.m  convert_data_to_BIDS  get_physio_regressor_files.m  get_physio_regressor_files.m~  rename2BIDS  run_bids_validator  uqkgarn1@awoonga.qriscloud.org.au
cluster-scripts/: run-fmriprep.sh  run-mriqc.sh  run_bids_validator.sh
fmriprep/: README.md  run_fmriprep
frstlvlglm/: .~lock.sub_onsets_file_MOTOR_coding.csv#  SPM_est_job.m  Spec_1st_lvl_job_Paul.asv  Spec_1st_lvl_job_Paul.m  auto_generate_factorial_contrasts.m  contrast_matrix_builder.asv  contrast_matrix_builder.m  contrast_zero_count.m  contrasts_definition.asv  contrasts_definition.m  defining_base_contrasts_for_task.m  merge_results_PDFs.R  run-flvl-glm.ipynb  run_contrast_comps.m  run_contrast_results_over_subs.m  run_first_level_glm.asv  run_first_level_glm.m  run_frst_lvl_glm.asv  run_frst_lvl_glm.m  (+19 more)
physiol_regress/get_movement_regressors/: LICENSE  README.md  example.py  get_movement_parameters_per_subject.py  pyproject.toml  setup.cfg
physiol_regress/get_movement_regressors/src/get_regressors/: console.py  example_paul.py  get_movement_parameters_per_subject.py  get_movement_parameters_per_subject_BU.py
physiol_regress/get_movement_regressors/src/get_regressors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+75 files in other folders)
