[metadata]
name = get-regressors
version = 0.0.1
author = Kelly Garner
author_email = getkellygarner@gmail.com
description = Gets motion regressors from frmiprep outputs for use with SPM and other packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kel-github/imaging_cert_value_7T_pipeline/tree/master/physiol_regress/get_movement_regressors/src/get_regressors
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = get_regressors.console:main